# project-evidence-review-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  artifacts.md  demo_workflow.md  design_principles.md  example_commands.md  llm_review.md  orchestration.md  roadmap.md  safety_boundaries.md
examples/project_pack/: decision_log.md  project_config.yaml  release_summary.json  requirements.md  risk_log.csv  testing_notes.txt
src/project_evidence_review_agent/: __init__.py  __main__.py  claim_review.py  cli.py  contradictions.py  evidence_index.py  evidence_pack_markdown.py  follow_up_analysis.py  langgraph_workflow.py  llm_client.py  llm_context.py  main.py  missing_evidence.py  project_report.py  retrieval.py  review_question.py  source_inventory.py  trace.py  version.py  workflow.py  workflow_state.py
tests/: test_claim_review.py  test_cli.py  test_follow_up_analysis.py  test_project_report.py
