[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "project-evidence-review-agent"
version = "0.1.0"
description = "Local-first scaffold for bounded project evidence review workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aojrzynski" }]
dependencies = [
  "PyYAML>=6",
]

[project.scripts]
project-evidence-review = "project_evidence_review_agent.cli:main"

[project.optional-dependencies]
llm = [
  "openai>=1.82",
]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
